...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <TextView
            android:id="@+id/selectedGymName"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:padding="8dp"
            android:text="@string/selected_gym"
            android:textStyle="bold"
            />
    </androidx.appcompat.widget.Toolbar>

    <Button
        android:id="@+id/generateNewRoute"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/bg_white"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wall_toolbar" />

    <ListView
        android:id="@+id/routeList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
