...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:layout_marginTop="0dp"
                android:iconifiedByDefault="false"
                android:orientation="vertical"
...
                />
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ListView
        android:id="@+id/search_result_listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1A886c91"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_toolbar" />
...
